# DeNN-NTK

./: .gitignore  README.md  pyproject.toml  tach.toml
experiments/: kernel3_vs_depth_finite.ipynb  kernel3_vs_depth_finite_empirical.ipynb  kernel3_vs_depth_finite_empirical.py  kernel3_vs_depth_finite_empirical_largeexperiments.py  kernel3_vs_depth_finite_empirical_largeexperiments_viz.ipynb  kernel3_vs_depth_finite_empirical_largeexperiments_viz.py  kernel3_vs_depth_finite_empirical_largeexperiments_viz_wrtL.py  kernel3_vs_depth_infinite.ipynb  kernel3_vs_depth_infinite.py  ntk_correction_largeexperiments_viz.py  ntk_correction_largeexperiments_viz_wrtL.ipynb  ntk_correction_largeexperiments_viz_wrtL.py  ntk_correction_vs_depth_largeexperiments.py  ntk_vs_depth.ipynb  ntk_vs_depth.py  ntk_vs_depth_finite.ipynb  ntk_vs_depth_finite.py  ntk_vs_depth_infinite.ipynb  ntk_vs_depth_infinite.py  slopes_D_IN.txt  slopes_L.txt  slopes_N.txt
model/: __init__.py
model/finitewidth/: __init__.py  finitewidth.py  kernel3.py  kernel3_empirical.py  kernel3_mean.py
model/infinitewidth/: __init__.py  infinitewidth.py  kernel3_infinite.py  ntk_vs_depth_infinite.py
model/model1/: model1.py
model/model2/: model2.py
refs/researchroadmap/texsources/: report.tex
refs/template/: template.tex
refs/wk4-ntk-sobolev/meeting4/: beamer.tex  draft.tex  main.tex  script.md  todo.md
refs/wk5-ntk-sobolev/meeting4/: report.tex
refs/wk5-ntk-sobolev/meeting5/: beamer.tex  (+2 more)
tests/: test_env.py  test_formal_expression.py  test_infinite_width.py  test_jax.py  test_kernels.py  test_term.py
(+290 files in other folders)
