[project]
name = "deeperorwider"
version = "0.1.0"
description = "Deeper or wider NN NTK analysis for PDE solving and operator learning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flax>=0.10.4",
    "jax>=0.4.34",
    "neural-tangents>=0.6.5",
    "pytest>=8.3.5",
    "ruff>=0.11.13",
    "sympy>=1.14.0",
    "tach>=0.29.0",
    "ty>=0.0.1a10",
]




[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"finitewidth"="model/finitewidth/"} # you can write inside the brackets something like "Model1" = "models/model1/", "Model2" = "models/model2/"
packages = ["finitewidth"] # same, smth like ["Model1", "Model2"]



[tool.setuptools.package-data]
"*" = ["*.py", "*.pyi", "*.c", "*.h", "*.cpp", "*.hpp"]
